@@ -88,6 +88,7 @@
 					<argLine>
 						--add-opens java.base/java.nio=ALL-UNNAMED
 						--enable-native-access=ALL-UNNAMED
+						--sun-misc-unsafe-memory-access=allow
 					</argLine>
 				</configuration>
 				<executions>
